--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/index.css">
+  <script src="./js/index.js"></script>
 </head>
 <body>
   <h1>Homepage</h1>
+  <div>
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">About us</a></li>
+      <li><a href="">Contact us</a></li>
+    </ul>
+  </div>
+
+  <div class="footer">Footer</div>
 </body>
 </html>
