--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
     <ul>
       <li><a href="">Home</a></li>
-      <li><a href="">About us</a></li>
+      <li><a href="./about-us.html">About us</a></li>
       <li><a href="">Contact us</a></li>
     </ul>
   </div>
