contact page added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h1>Homepage</h1>
   <div>
     <ul>
-      <li><a href="">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="./about-us.html">About us</a></li>
-      <li><a href="">Contact us</a></li>
+      <li><a href="./contact.html">Contact us</a></li>
     </ul>
   </div>
 
