--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My first webApp</title>
   <link rel="stylesheet" href="./css/index.css">
   <script src="./js/index.js"></script>
 </head>
@@ -11,7 +11,7 @@
   <h1>Homepage</h1>
   <div>
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
       <li><a href="./about-us.html">About us</a></li>
       <li><a href="./contact.html">Contact us</a></li>
     </ul>
