--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <li><a href="./about-us.html">About us</a></li>
       <li><a href="./contact.html">Contact us</a></li>
     </ul>
+
+    <div class="album"></div>
   </div>
 
   <div class="footer">Footer</div>
