album info added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="./contact.html">Contact us</a></li>
     </ul>
 
-    <div class="album"></div>
+    <div class="album">Latest songs</div>
   </div>
 
   <div class="footer">Footer</div>
