--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="./index.html">Home</a></li>
       <li><a href="./about-us.html">About us</a></li>
       <li><a href="./contact.html">Contact us</a></li>
+      <li><a href="./blog.html">Blog</a></li>
     </ul>
 
     <div class="album">Latest songs</div>
