--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="./js/index.js"></script>
 </head>
 <body>
-  <h1>welcome to musicJungle</h1>
+  <h1>Welcome to homepage</h1>
   <div>
     <ul>
       <li><a href="./index.html">Home</a></li>
