--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Welcome to homepage</h1>
+  <p>My content</p>
   <div>
     <ul>
       <li><a href="./index.html">Home</a></li>
