--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="./js/index.js"></script>
 </head>
 <body>
-  <h1>Welcome to homepage</h1>
+  <h1>Homepage</h1>
   <p>My content</p>
   <div>
     <ul>
