--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <script src="./js/index.js"></script>
 </head>
 <body>
-  <h1>Homepage</h1>
-  <p>My content</p>
+
+  <p>I am normal</p>
+  <p style="color:red;">I am red</p>
+  <p style="color:blue;">I am blue</p>
+  <p style="font-size:50px;">I am big</p>
+  
   <div>
     <ul>
       <li><a href="./index.html">Home</a></li>
